--- a/css/styles.css
+++ b/css/styles.css
@@ -97,7 +97,7 @@ ol {
   margin-right: auto;
   padding-left: 15px;
   padding-right: 15px;
-  /*outline: 1px solid orange;*/
+  /* outline: 1px solid orange; */
 }
 
 /*=========HEADER========*/
@@ -232,9 +232,9 @@ ol {
   line-height: 1.36;
   letter-spacing: 0.06em;
   text-transform: uppercase;
-  margin-bottom: 30px;
-  padding-left: 252px;
-  padding-right: 252px;
+  max-width: 696px;
+  margin: 0 auto;
+  margin-bottom: var(--card-set-gap);
 }
 
 .hero-btn {
@@ -299,6 +299,9 @@ ol {
 
 .our-activities .container {
   display: flex;
+}
+
+.our-activities {
   padding-bottom: var(--section-inner-padding);
 }
 
@@ -314,15 +317,16 @@ ol {
 
 .our-activities-list {
   display: flex;
-  padding-bottom: var(--section-inner-padding);
+  flex-wrap: wrap;
+  margin-left: calc(-1 * var(--card-set-gap));
+  margin-top: calc(-1 * var(--card-set-gap));
 }
 
 .our-activities-item {
-  display: inline-block;
-}
-
-.our-activities-item:not(:last-child) {
-  margin-right: 30px;
+  display: flex;
+  margin-left: 30px;
+  margin-top: 30px;
+  flex-basis: calc(100% / 3 - var(--card-set-gap));
 }
 /*===OUR ACTIVITIES END====*/
 
@@ -346,14 +350,15 @@ ol {
 
 .our-team-list {
   display: flex;
-}
-
-.our-team-item:not(:last-child) {
-  margin-right: 30px;
+  flex-wrap: wrap;
+  margin-left: calc(-1 * var(--card-set-gap));
+  margin-top: calc(-1 * var(--card-set-gap));
 }
 
 .our-team-item {
-  display: block;
+  margin-left: 30px;
+  margin-top: 30px;
+  flex-basis: calc(100% / 4 - var(--card-set-gap));
 }
 
 .team-name-container {
@@ -442,13 +447,10 @@ ol {
   padding-top: var(--section-inner-padding);
 }
 
-.button-list {
-  margin-bottom: 50px;
-}
-
 .filter-list {
   display: flex;
   justify-content: center;
+  margin-bottom: 50px;
 }
 
 .filter-list-item {
@@ -499,6 +501,10 @@ ol {
   box-sizing: border-box;
   margin-top: 30px;
   margin-left: 30px;
+}
+
+.cards-image {
+  max-width: 100%;
 }
 
 /*ТЕКСТ КАРТОЧКИ*/
